<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateDrinkFragment">



    <TextView
        android:id="@+id/tv_header_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cocktails_book"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:paddingTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_fragment_create_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_cocktail"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header_create" />

    <EditText
        android:id="@+id/et_fragment_create_cocktail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ellipsize="middle"
        android:ems="13"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fragment_create_title"
        />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_fragment_create"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fragment_create_cocktail_name"
        app:riv_border_color="@color/black"
        app:riv_border_width="1dip"
        app:riv_corner_radius="20dip"
        app:riv_oval="false"
        app:riv_tile_mode="clamp" />

    <EditText
        android:id="@+id/et_fragment_create_cocktail_url_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ellipsize="middle"
        android:ems="13"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_fragment_create"
        android:hint="@string/url_image_cocktail"
        />


    <TextView
        android:id="@+id/tv_fragment_create_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dancing_script"
        android:textSize="20sp"
        android:text="Ingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_fragment_create_cocktail_url_img" />


    <EditText
        android:id="@+id/et_fragment_create_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text=""
        android:maxLines="5"
        android:minLines="3"
        android:inputType="textMultiLine"
        android:ems="13"
        android:minHeight="80dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fragment_create_ingredients" />


    <TextView
        android:id="@+id/tv_fragment_create_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="Instructions"
        android:fontFamily="@font/dancing_script"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_fragment_create_ingredients" />

    <EditText
        android:id="@+id/et_fragment_create_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:ems="13"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minLines="3"
        android:minHeight="80dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fragment_create_instructions" />

    <Button
        android:id="@+id/btn_create_cocktail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_button"
        android:minHeight="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="0dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fragment_create_instructions" />


</androidx.constraintlayout.widget.ConstraintLayout>